<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Kwik Shop</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_list_of_shopping_list">Shopping Lists</string>
    <string name="title_activity_shopping_list">Shopping Lists</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_shopping_list_detail">Shopping List Detail</string>
    <string name="title_activity_list_of_recipes">List of Recipes</string>
    <string name="title_activity_recipe_detail">Recipe Detail</string>
    <string name="title_activity_recipe_item_details">Recipe Item Details</string>
    <string name="title_activity_recipe">Recipes</string>
    <string name="title_activity_location">Supermarket Finder</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_fragment_item_details">Create new item</string>
    <string name="title_fragment_reminder">Reminder</string>
    <string name="create_calendar_event">Create calendar event</string>
    <string name="edit_calendar_event">Edit calendar event</string>
    <string name="dateDescription_just_now">just now</string>
    <string name="dateDescription_minutes_ago">%1$s minutes ago</string>
    <string name="about_Commit_Title" translatable="false">Commit</string>
    <string name="about_Version_Title" translatable="false">Version</string>
    <string name="about_Commit_Format" translatable="false">"kwikshop-android:\n%1$s\n\nkwikshop-common:\n%2$s"</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="delete_shopping_list">Delete Shopping List</string>
    <string name="localization_no_place_dialog_title">No Supermarket</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_retry">Retry</string>
    <string name="localization_supermarket_select_dialog_title">Select your current Supermarket</string>
    <string name="localization_supermarket_select_dialog_not_found">Not listed</string>
    <string name="localization_dialog_title">Localization</string>
    <string name="localization_dialog_message">Kwik Shop wants to locate your position to display nearby stores and help you to sort your Shopping Lists.\nDo you agree?</string>
    <string name="localization_disable_localization">disable localization</string>
    <string name="localization_no_connection_message">Kwik Shop needs a connection to the internet to find all nearby supermarkets.</string>
    <string name="no_place_dialog_message">Kwik Shop does not find any store in your area.</string>
    <string name="no_last_location_dialog_message">Kwik Shop can not find your current location.</string>
    <string name="no_play_service_installed_title" translatable="false">Google Play Services</string>
    <string name="no_play_service_installed_message">Google Play Services are currently not installed on your device. Do you want to install Google Play Service?</string>
    <string name="install">Install</string>
    <string name="places_search">e.g. Aldi in Berlin</string>
    <string name="localize">Localize</string>
    <string-array name="store_types_array">
        <item>@string/store_type_supermarket</item>
        <item>@string/store_type_bakery</item>
        <item>@string/store_type_gasstation</item>
        <item>@string/store_type_liquorstore</item>
        <item>@string/store_type_pharmacy</item>
        <item>@string/store_type_shoppingmall</item>
        <item>@string/store_type_store</item>
    </string-array>
    <string name="tutorial_navigation_title">Navigation Menu</string>
    <string name="tutorial_navigation_description">To open the navigate menu press on the upper left icon or just swipe from the left edge to the right.</string>
    <string name="tutorial_create_shopping_list_title">Create Shopping list</string>
    <string name="tutorial_create_shopping_list_description">In order to create a shopping list press on the yellow add button on the bottom right.</string>
    <string name="tutorial_create_item_title">Add item to shopping list</string>
    <string name="tutorial_create_item_description">You can add items in two ways. By the input field at top of the shopping list or by the yellow add button on the bottom right.</string>
    <string name="tutorial_swipe_item_title">Put item into shopping cart</string>
    <string name="tutorial_swipe_item_description">Just swipe the item to put it from your list into the  shopping cart and vice versa.</string>
    <string name="tutorial_add_recipe_to_shopping_list_title">Add recipe to shopping list</string>
    <string name="tutorial_add_recipe_to_shopping_list_description">press on menu at top and select "Add recipe". Now choose your recipe and amount of pieces.</string>
    <string name="itemdetails_brand">Brand</string>
    <string name="itemdetails_comment">Comment</string>
    <string name="itemdetails_amount">Amount</string>
    <string name="action_item_details_save">Save</string>
    <string name="itemdetails_saved">Item saved</string>
    <string name="itemdetails_last_bought">Found at</string>
    <string name="highlight">Highlight</string>
    <string name="regular_repeat">Regularly repeat this item</string>
    <string name="every">every</string>
    <string name="from_now_on">From now on</string>
    <string name="from_time_of_next_purchase_on">From time of next purchase on</string>
    <string name="title_delete_item">Delete item</string>
    <string name="message_delete_item">Are you sure you want to delete this item?</string>
    <string name="message_delete_selected_items">Are you sure you want to delete the selected items?</string>
    <string name="reset">Reset</string>
    <string name="settings_option_2_setlocale">Locale</string>
    <string name="settings_option_2_desc">Change the language</string>
    <string name="settings_option_3_deleteHistory">Autocompletion</string>
    <string name="settings_option_3_desc">Delete the history</string>
    <string name="settings_option_3_check_title">Delete history?</string>
    <string name="settings_option_3_check_text">Are you sure you want to delete the history of autocompletion?</string>
    <string name="settings_option_3_error">Unfortunately an error occurred while deleting the history</string>
    <string name="settings_option_3_success">Successfully deleted history</string>
    <string name="settings_option_3_createUnits">Create or remove units</string>
    <string name="settings_option_4_createGroups">Create and remove groups</string>
    <string name="settings_option_3_desc2">Create or remove units and groups</string>
    <string name="settings_option_4_desc">Create groups for items</string>
    <string name="settings_option_4_APIEndPoint_Title">API Endpoint</string>
    <string name="settings_option_4_APIEndPoint_Desc">Change the address of the Kwik Shop server to use</string>
    <string name="settings_option_5_location_permission_title">Location tracking</string>
    <string name="settings_option_5_location_permission_desc">Enable location tracking while shopping</string>
    <string name="dont_show_this_message_again">Do not show me again</string>
    <string name="settings_option_6_item_deletion_name">Item Deletion</string>
    <string name="settings_option_6_item_deletion_descr">Always ask before deleting an item</string>
    <string name="settings_option_7_parser_separate_word_name">Item separator word</string>
    <string name="settings_option_7_parser_separate_word_descr">Choose word to separate multiple items </string>
    <string name="localization_store_types_dialog_title">Store types</string>
    <string name="localization_store_types_dialog_caption">Select your preferred store types</string>
    <string name="localization">Localization</string>
    <string name="general">General</string>
    <string name="voice_entry">Voice Entry</string>
    <string name="account">Account</string>
    <string name="synchronization">Synchronization</string>
    <string name="radius">Radius</string>
    <string name="setting_change_radius_description">Change radius in meters for Supermarket Finder</string>
    <string name="overflow_action_menu_settings">Settings</string>
    <string name="overflow_action_menu_about">About</string>
    <string name="overflow_action_menu_listofshoppinglists">Shopping Lists</string>
    <string name="overflow_action_menu_move_all_to_shopping_cart">Mark everything as bought</string>
    <string name="overflow_action_menu_move_all_from_shopping_cart">Mark nothing as bought</string>
    <string name="overflow_action_menu_shopping_mode">Shopping Mode</string>
    <string name="overflow_action_menu_shopping_mode_quit">Quit Shopping Mode</string>
    <string name="overflow_action_menu_edit">Edit</string>
    <string name="enter_shoppinglist_name">Name your Shopping List</string>
    <string name="itembought">Item bought</string>
    <string name="item_deleted">Item deleted</string>
    <string name="taptoundo">UNDO</string>
    <string name="magic">magic</string>
    <string name="sort_by">Sort by</string>
    <string-array name="sort_by_array">
        <item>Manual</item>
        <item>Group</item>
        <item>Alphabetically</item>
    </string-array>
    <string name="defaultItem">Touch to create a new item</string>
    <string name="ShoppingListItem">Shopping List item</string>
    <string name="title_default_list">Shopping List 1</string>
    <string name="sortby_manual">Manual</string>
    <string name="sortby_group">Group</string>
    <string name="sortby_alphabetically">Alphabetically</string>
    <string name="item_divider">next</string>
    <string name="hello_world">Hello world!</string>
    <string name="item">Item</string>
    <string name="items">Items</string>
    <string name="error_empty_productname">Product name must not be empty</string>
    <string name="shoppinglist_divider_textview">Shopping cart</string>
    <string name="group">Group</string>
    <string name="other">Other</string>
    <string name="manual">Manual</string>
    <string name="nothing">Nothing</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="githubLink" translatable="false">https://github.com/FAU-Inf2/kwikshop-android</string>
    <string name="viewOnGitHub">View on GitHub</string>
    <string name="acknowledgements_Title">Acknowledgements</string>
    <string name="acknowledgements_Description">This application uses several third-party libraries:</string>
    <string name="title_activity_login">Login</string>
    <string name="login_skip">Skip login</string>
    <string name="sign_out">Sign Out</string>
    <string name="retry">Retry</string>
</resources>