<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/empty"
        android:title="options"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark">

        <menu>

            <item android:id="@+id/action_listofshoppinglists"
                  app:showAsAction="ifRoom"
                  android:title="@string/overflow_action_menu_listofshoppinglists" />
            <item android:id="@+id/action_settings"
                  app:showAsAction="ifRoom"
                  android:title="@string/overflow_action_menu_settings" />
            <item android:id="@+id/action_about"
                  app:showAsAction="ifRoom"
                  android:title="@string/overflow_action_menu_about" />

        </menu>

    </item>

</menu>