<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="de.fau.cs.mad.kwikshop.android.view.LoginActivityFragment"
              android:background="@color/primary_Color">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/login_logo"
        android:src="@drawable/login_logo"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/login_status"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/login_debug_status"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"/>

    <Button
        android:id="@+id/login_debug_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="DEBUG Login"
        android:textColor="@android:color/white"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

    <Button
        android:id="@+id/login_debug_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="DEBUG Logout"
        android:textColor="@android:color/white"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="gone"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/login_retry_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <Button
            android:id="@+id/login_sign_out_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/sign_out"
            android:textColor="@android:color/white"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_skip_button"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_skip"/>
    </LinearLayout>
</LinearLayout>
